--- a/ProyectoFDI.html
+++ b/ProyectoFDI.html
@@ -378,20 +378,20 @@
           <div class="media-object-section">
               <a href="https://rafaelelu.github.io/Profesor1.html"><h4>Prof. Jorge Ramírez Sánchez</h4></a>
                 <b>Materia(s): </b> Física I y Electricidad y Magnetismo. <br>
-                    <b>Calificación: </b> 4/5
+                    <b>Calificación: </b> 3/5
               
                     <table class="unstriped">
                         <tbody>
                             <tr>
-                                <td><b>Aprendizage: </b>4/5</td>
-                                <td><b>Dinamismo: </b>4/5</td>
+                                <td><b>Aprendizage: </b>3/5</td>
+                                <td><b>Dinamismo: </b>3/5</td>
                             </tr>
                             <tr>
-                                <td><b>Claridad: </b>4/5</td>
-                                <td><b>Asesorías: </b>4/5</td>
+                                <td><b>Claridad: </b>3/5</td>
+                                <td><b>Asesorías: </b>3/5</td>
                             </tr>
                             <tr>
-                                <td><b>Recomendación: </b>5/5</td>
+                                <td><b>Recomendación: </b>3/5</td>
                                 <td><b>Meterían otra materia con él: </b>Sí</td>
                             </tr>
                         </tbody>
@@ -497,23 +497,23 @@
                 </div>
           </div>
           <div class="media-object-section">
-              <a href="https://rafaelelu.github.io/Profesor1.html"><h4>Prof. Juan Pérez García</h4></a>
+              <a href="https://rafaelelu.github.io/Profesor1.html"><h4>Prof. Francisco López Garza</h4></a>
                 <b>Materia(s): </b> Estática y Dinámica. <br>
-                    <b>Calificación: </b> 4/5
+                    <b>Calificación: </b> 1/5
               
                     <table class="unstriped">
                         <tbody>
                             <tr>
-                                <td><b>Aprendizage: </b>4/5</td>
-                                <td><b>Dinamismo: </b>4/5</td>
+                                <td><b>Aprendizage: </b>1/5</td>
+                                <td><b>Dinamismo: </b>1/5</td>
                             </tr>
                             <tr>
-                                <td><b>Claridad: </b>4/5</td>
-                                <td><b>Asesorías: </b>4/5</td>
+                                <td><b>Claridad: </b>0/5</td>
+                                <td><b>Asesorías: </b>2/5</td>
                             </tr>
                             <tr>
-                                <td><b>Recomendación: </b>5/5</td>
-                                <td><b>Meterían otra materia con él: </b>Sí</td>
+                                <td><b>Recomendación: </b>1/5</td>
+                                <td><b>Meterían otra materia con él: </b>No</td>
                             </tr>
                         </tbody>
                     </table>
