--- a/Profesor3.html
+++ b/Profesor3.html
@@ -174,7 +174,7 @@
                         Claridad: 1/5<br>
                         Asesorías: 1/5<br>
                         Recomendación: 1/5<br>
-                        Metería otra materia con él: Sí<br>
+                        Metería otra materia con él: No<br>
                     </p>
                 </div>
             </div>
@@ -203,12 +203,12 @@
                 <button class="button" type="button" data-toggle="example-dropdown2">Detalle de evaluación</button>
                 <div class="dropdown-pane" id="example-dropdown2" data-dropdown>
                     <p>
-                        Aprendizage:03/5<br>
+                        Aprendizage:0/5<br>
                         Dinamismo: 0/5<br>
                         Claridad: 0/5<br>
                         Asesorías: 0/5<br>
                         Recomendación: 0/5<br>
-                        Metería otra materia con él: Sí<br>
+                        Metería otra materia con él: No<br>
                     </p>
                 </div>
             </div>
